Clean Code 3장 문서 추가

--- a/book/clean-code/03_함수.md
+++ b/book/clean-code/03_함수.md
@@ -333,3 +333,95 @@ public void appendFooter(StringBuffer report)
 ```java
 report.appendFooter()
 ```
+
+### 명령과 조회의 분리
+- 함수는 뭔가를 수행하거나 뭔가에 답하거나 둘 중 하나만 해야한다.
+- 객체 상태를 변경하거나 아니면 객체 정보를 반환하거나
+
+```java
+public boolean set(String attribute, String value);
+```
+
+- 위의 함수는 이름이 attribute 인 속성을 찾아 값을 value로 설정한후 boolean 값을 리턴한다.
+- 이따구로 짜면
+
+```java
+if(set("username","unclebob"))
+```
+
+- 이런 괴상한 코드가 나오는데, 저게 설정하라는거 확인하는 함수인지 설정하는함수인지 짐작이 어렵다.
+- set이라는 함수이름자체도 별로고, 조회와 설정이 같이 있어 헷갈린다.
+
+```java
+if (attributeExists("username")) {
+    setAttribute("username", "unclebob");
+}
+```
+
+- 이렇게 바꾸는게 훠어얼씬낫다.
+
+### 오류 코드보다 예외를 사용하라
+- 명령함수에서 오류 코드를 반환하는 방식은 명령 / 조회 분리규칙을 미묘하게 위반한다.
+
+```java
+if (deletePage(page) == E_OK) {
+    if (registry.deleteReference(page.name) == E_OK) {
+      if (configKeys.deleteKey(page.name.makeKey()) == E_OK){
+        logger.log("page deleted");
+      } else {
+        logger.log("configKey not deleted");
+      }
+    } else {
+      logger.log("deleteReference from registry failed");
+    }
+  } else {
+    logger.log("delete failed");
+    return E_ERROR;
+  }
+```
+
+- 이런식으로 복잡해진다.
+
+```java
+try {
+    deletePage(page);
+    registry.deleteReference(page.name);
+    configKeys.deleteKey(page.name.makeKey());
+} catch (Exception e) {
+    logger.log(e.getMessage());
+}
+```
+
+- 이렇게 예외처리로 바꾸는게 더 깔끔해 진다.
+- 좀더 깔끔하게 하려면 try / catch 함수를 별도로 빼는 거다
+
+```java
+public void delete(Page page) {
+    try {
+        deletePageAndAllReference(page);
+    } catch logError(e);
+}
+
+private void deletePageAndAllReferences(Page page) throws Exception {
+    deletePage(page);
+    registry.deleteReference(page.name);
+    configKeys.deleteKey(page.name.makeKey());
+}
+
+private void logError(Exception e) {
+    logger.log(e.getMessage());
+}
+```
+- 모든 오류는 delete에서 처리된다. 따라서 정상동작과 오류처리 동작을 구분해서 좀더 이해하기가 쉽다.
+
+### 반복하지 마라!
+- 말그대로 반복해서 중복되는 코드를 만들지 말자
+
+### 구조적 프로그래밍
+- 모든 함수와 함수 내 모든 블록에 입구와 출구는 하나여야 한다
+- return 문이 하나여야 하고, 루프 안에서 break 나 continue도 안되고 goto 도 절대 안된다.(그런가..?)
+- 뭐 적당히 쓰랜다
+
+### 함수를 어떻게 짜죠?
+- 글쓰기와 마찬가지로 초안을 대충 적고 다시 고친다.
+- 함수도 처음엔 길고 복잡하게 짠 다음, 이후에 이름도 바꾸고 중복도 제거하고 순서도 바꾸고 한다.
