Spring in Action 7장 정리 문서 추가

--- a/book/spring-in-action/007_고급스프링MVC.md
+++ b/book/spring-in-action/007_고급스프링MVC.md
@@ -195,4 +195,171 @@ public interface Part {
 3. 예외 처리를 위한 메소드에는 @ExceptionHandler 어노테이션을 붙여 줄 수 ㅇㅆ다.
 ```
 
-### 3-1. 
+### 3-1. 예외를 HTTP 상태 코드에 매핑하기
+- 스프링은 자동적으로 12개의 예외를 상태코드로 매핑시켜 준다
+
+![Alt text](../../images/book/advanceMvc.png)
+
+- 위의 예외들은 일반적으로 DispatcherServlet 동작이나 검증 수행 과정에서 오류가 나면 발생한다.
+- 위의 내장 매핑들이 유용하긴 하지만, 실제 어플리케이션 예외에선 쓸모가 없다.
+- 이런 경우를 해결하기 위해 쓰이는게 @ResponseStatus
+
+```java
+@RequestMapping(value="/{spittleId}", method=RequestMethod.GET)
+public String spittle(
+    @PathVariable("spittleId") long spittleId,
+    Model model
+) {
+    Spittle spittle = spittleRepository.findOne(spittleId);
+    if (spittle == null) {
+        throw new SpittleNotFoundException();
+    }
+    model.addAttribute(spittle);
+    return "spittle";
+}
+```
+
+```java
+public class SpittleNotFoundException extends RuntimeException {}
+```
+
+- 위의 로직에서 에러가 발생하면, 기본 결과 상태 코드인 500 에러를 발생시킨다.
+- 하지만 커스텀 예외에서 404의 상태와 같이 다른 상태값으로 매핑도 가능하다.
+
+```java
+@ResponseStatus(value=HttpStatus.NOT_FOUND, // 404로 매핑
+                reason="Spittle Not Found")
+public class SpittleNotFoundException extends RuntimeException {}
+```
+
+- 이런 식으로 @ResponseStatus를 활용하면 어떤 에러 상태값으로 보낼지 정해 줄 수 있다.
+
+### 3-2. 예외 처리 메소드 작성하기
+- 위에처럼 단순히 에러 상태값을 보여주는 것도 좋지만, 메세지등 다양한 예외 정보가 필요할 때가 있다.
+
+```java
+@RequestMapping(method=RequestMethod.POST)
+public String saveSpittle(SpittleForm form, Model model) {
+    try {
+        spittleRepository.save(
+            new Spittle(null, form.getMessage(), new Date(),
+                        form.getLongitude(), form.getLatitude())
+        );
+        return "redirect:/spittles";
+    } catch (DuplicateException e) {
+        return "error/duplicate";
+    }
+}
+```
+
+- 이렇게 좀 지저분하지만 특정 상황에 예외를 잡아 처리가 가능하다.
+- 하지만 이렇게하면 더러우니까 메소드별로 처리를 해보자
+
+```java
+@RequestMapping(method=RequestMethod.POST)
+public String saveSpittle(SpittleForm form, Model model) {
+    spittleRepository.save(
+        new Spittle(null, form.getMessage(), new Date(),
+                    form.getLongitude(), form.getLatitude())
+    );
+    return "redirect:/spittles";
+}
+```
+
+- 이렇게 메소드는 따로 예외 처리를 해주지 않고, 컨트롤러 내부에서 @ExceptionHandler를 만들어준다.
+
+```java
+@ExceptionHandler(DuplicateSpittleException.class)
+public String handleDuplicateSpittle() {
+    return "error/duplicate";
+}
+```
+
+- 이런식으로 ExceptionHandler 어노테이션을 사용하면 특정 컨트롤러 내에서 예외 발생시 공통으로 처리해 준다.
+
+## 4. 어드바이징 컨트롤러
+- 컨트롤러 어드바이스는 @ControllerAdvice이 붙어있는 클래스로 아래의 메소드를 포함한다.
+```java
+1. @ExceptionHandler 어노테이션이 붙어있는 메소드
+2. @InitBinder 어노테이션이 붙어있는 메소드
+3. @ModelAttribute 어노테이션이 붙어있는 메소드
+```
+
+- 가장 쓸모있어 보이는거는 위에서 썼던 컨트롤러 단위의 예외처리인 @ExceptionHandler와 같이 사용하는 거다.
+
+```java
+@ControllerAdvice
+public class AppWideExceptionHandler {
+
+    @ExceptionHandler(DuplicateSpittleException.class)
+    public String duplicateSpittleHandler() {
+        return "error/duplicate";
+    }
+}
+```
+
+- 이제 컨트롤러 어드바이스를 사용을 해서, 어떤 컨트롤러에서 DuplicateSpittleException이 발생해도,위의 메소드를 타게 된다.
+
+## 5. 리다이렉션되는 요청 간의 데이터 전달
+- 리다이렉트는 좋은 페이지 이동 방법이지만, 데이터를 전달할 필요성이 있을 때가 있다.
+- 아래의 그림은 새로운 리퀘스트가 생성되어 데이터가 사라지는걸 보여준다.
+
+![Alt text](../../images/book/advanceMvc2.jpg)
+- 리다이렉션시에 데이터 전달하는 방법
+
+```java
+1. 데이터를 URL 템플릿을 사용하여 패스 변수나 쿼리 인자로 전달
+2. 데이터를 플래시 애트리뷰트에 넣어서 전달
+```
+
+### 5-1. URL 템플릿과 함께 리다이렉션하기
+- 간단하게 리다이렉트 시에 path param으로 넘겨준다.
+
+```java
+return "redirect:/spitter/{username}";
+```
+
+- 모델에 데이터를 추가해 준다.
+
+```java
+@RequestMapping(value="/register", method=POST)
+public String processRegistration(Spitter spitter, Model model) {
+    spitterRepository.save(spitter);
+    model.addAttribute("username", spitter.getUsername());
+    return "redirect:/spitter/{username}";
+}
+```
+
+- 쿼리 파람에 포함시키려면 모델에 값을 추가만 해주고, 플레이스홀더로 안보내 주면된다.
+
+```java
+@RequestMapping(value="/register", method=POST)
+public String processRegistration(Spitter spitter, Model model) {
+    spitterRepository.save(spitter);
+    model.addAttribute("username", spitter.getUsername());
+    model.addAttribute("spitterId", spitter.getId());
+    return "redirect:/spitter/{username}";
+}
+```
+
+- 위와 같이 보낼경우, 실질적인 리다이렉트 패스는 "spitter/username?spittleId=idValue" 이다.
+- 이런식으로 쿼리파람이나 패스파람으로 넘기는건 편해보이지만, 보내는 데이터 타입에 한계가 있음
+
+### 5-2. 플래시 어트리뷰트로 작업하기
+- 짜잘하게 ID나 이름같은거 넘기지말고 객체를 통채로 넘기면 좋을거 같음
+- 그래서 세션을 쓰는방법이 있는데, 기능은 좋지만 까먹을 확률이 높아서 비추
+- 그래서 나온게 리다이렉트할 때 한번만 쓰고 사라지는 플래시 어트리뷰트
+
+```java
+@RequestMapping(value="/register", method=POST)
+public String processRegistration(Spitter spitter, RedirectAttributes model) {
+    spitterRepository.save(spitter);
+    model.addAttribute("username", spitter.getUsername());
+    model.addFlashAttribute("spitter", spitter);
+    return "redirect:/spitter/{username}";
+}
+```
+- 리다이렉트 되기전에 모든 플래시 어트리뷰트는 세션으로 보사되고, 리다이렉션 이후 세션에 있던
+플래시 어트리뷰트는 모델로 저장된 후, 세션은 삭제해버린다.
+
+![Alt text](../../images/book/advanceMvc3.jpg)
